- GameFOX Options sometimes breaks in Mac platform
- GameFOX is not fully functional in SeaMonkey

Version 0.5.5.8
======================================================================
- (chrome/content/css/wide-layout.css): Allow board user navigation to
  be properly aligned to the right
- Update GameFOX board settings for use with new GameFAQs settings
  page

Version 0.5.5.7                                             2008-06-17
======================================================================
- Made the quick post form pretty
- Decode HTML entities when handling signatures and quotes
- Update the double click action on the active messages list for the
  new layout

Version 0.5.5.6                                             2008-02-03
======================================================================
- Fixed user highlighting, since I apparently broke it last release.
  Whoops!

Version 0.5.5.5                                             2008-01-30
======================================================================
- Firefox 3: This extension now provides secure updates.
- Linux: There are no longer any permission errors when adding CSS
  to the profile
- CSS developers: Highlighted posts now have a class
  (gamefox-highlight-(one|two)) to apply styles to in the event that
  your CSS breaks the integrated highlighter.

Version 0.5.5.4                                        August 13, 2007
======================================================================
- Fixed quoting not working in /gfaqs9

Version 0.5.5.3                                         August 5, 2007
======================================================================
- Fixed GameFOX not working correctly inside frames
- Descriptive window titles (gamefox.elements.titlechange) applies to
  frame container as well, but only for pages within the
  boards.gamefaqs.com host
- Fixed quoting in non-horizontal layout not removing QuickWhois
  information properly