@@ -32,7 +32,8 @@ pref("gamefox.italicMsg", true);
 pref("gamefox.removeSigs", true);
 pref("gamefox.GFCode.quote", 0);
 pref("gamefox.sig", "");
-pref("gamefox.sigSep", "---");
+pref("gamefox.sigPre", "");
+pref("gamefox.sigNewline", false);
 pref("gamefox.univSig", false);
 pref("gamefox.sigAdd", 1);
 pref("gamefox.gf.style", 1);
